<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dell.database.MainActivity"
    android:background="#72b3f7">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/editText5"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5"
        android:layout_marginTop="26dp"
        android:id="@+id/editText6"
        android:text="@string/editText6" />

    <Button
        android:text="@string/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/button2"
        android:onClick="login"
        android:background="#18b207" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/editText5"
        android:ems="10"
        android:layout_marginTop="13dp"
        android:id="@+id/editText5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="reg"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:background="#1cc90f" />
</RelativeLayout>
