<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dell.database.Registration"
    android:background="#83f2ea">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/editText1"
        android:ems="10"

        android:layout_marginTop="14dp"
        android:id="@+id/editText2"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/editText2"
        android:ems="10"
        android:layout_marginTop="18dp"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:id="@+id/editText4"
        android:text="@string/editText4"
        android:layout_marginRight="52dp"
        android:layout_marginEnd="52dp"
        android:layout_below="@+id/editText3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:id="@+id/button"
        android:onClick="userreg"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:background="#1fb30e" />
</RelativeLayout>
